# leslie-stock

./: .env.example  .gitignore  DATA_SOURCES.md  README.md  a-snapshot.json  pyproject.toml  us-snapshot.json  vercel.json
alerts/: email_sender.py
core/: BG_DNA.md  portfolio.csv  watchlist.csv
data/: README-data-pipeline.md  aleabit_candidates.json  aleabit_excluded.json  aleabit_manifest.json  arena-state-a.json  arena-state.json  com.leslie.pulse.daily.plist  concepts.json  concepts_meta.json  masters.json  rankings.json  top_serenity.json  watchlist.json  whales.json
db/: __init__.py  api.py  schema.sql
deliverables/: briefing_2026-05-25.md
docs/: ARCHITECTURE.md  PRD.md  REPORTS_PLAYBOOK.md
fetchers/: announcements.py  concepts.py  dataroma.py  dilution_flags.py  east_money.py  finnhub.py  fundamentals.py  history.py  macro.py  market_calendar.py  news_google.py  polygon_options.py  snapshot.py  sosovalue.py  tushare_client.py  universe.py  us_etfs.py  us_stocks.py
llm/: aleabit_analyzer.py  glm_client.py
monitor/: daily_briefing.py  portfolio.py  watchlist.py
news/: analyze.py  fetch.py
research/: __init__.py  archetype.py  brief.py
screener/: aleabit_candidates.py  aleabit_candidates_v2.py  aleabit_report.py  aleabit_scan.py  analyze_one.py  bg_evaluate.py  import_results.py  rank_universe.py  scan_v2.py
scripts/: a_industry.workflow.js  a_panel.workflow.js  a_serenity.workflow.js  ai_card.py  ai_sectors.json  aime_scan_card.py  append_daily_prices.py  arena_brain.py  arena_cloud.py  arena_engine.py  arena_week_card.py  auto_refresh_panels.py  (+71 more)
(+16854 files in other folders)
